<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_tasks"
        android:icon="@drawable/ic_task"
        android:title="@string/tasks" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/nav_leaderboard"
        android:icon="@drawable/ic_leaderboard"
        android:title="@string/leaderboard" />

    <item
        android:id="@+id/nav_achievements"
        android:icon="@drawable/ic_achievement"
        android:title="@string/achievements" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>