<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:icon="@drawable/ic_import"
        android:title="@string/import_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/export"
        app:showAsAction="never" />
</menu>
